--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Django==5.0.4
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
+idna==3.7
 psycopg2-binary==2.9.9
-pytz==2024.1
-sqlparse==0.4.4
 python-dotenv==1.0.1
+pytz==2024.1
+requests==2.31.0
+sqlparse==0.4.4
+urllib3==2.2.1
