--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.8.1
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==5.0.4
@@ -9,5 +11,7 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
+soupsieve==2.5
 sqlparse==0.4.4
+tzdata==2024.1
 urllib3==2.2.1
