--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "async-mutex": "^0.5.0",
     "jwt-decode": "^4.0.0",
     "lightweight-charts": "^4.1.3",
     "react": "^18.2.0",
