--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
     "async-mutex": "^0.5.0",
+    "axios": "^1.7.4",
     "jwt-decode": "^4.0.0",
     "lightweight-charts": "^4.1.3",
     "react": "^18.2.0",
